# ggcat

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
api/: Cargo.toml  build.rs
api/src/: lib.rs
assemblers-benchmark/: Cargo.toml  bench-settings.toml
assemblers-benchmark/compare-test/: Cargo.toml
assemblers-benchmark/compare-test/src/: main.rs
assemblers-benchmark/src/: config.rs  main.rs  runner.rs
cmdline/: Cargo.toml
cmdline/src/: assembler.rs  assembler_generic_dispatcher.rs  benchmarks.rs  main.rs  querier.rs  querier_generic_dispatcher.rs
cmdline/src/assemble_pipeline/: assembler_minimizer_bucketing.rs  build_unitigs.rs  hashes_sorting.rs  links_compaction.rs  mod.rs  reorganize_reads.rs  unitig_links_manager.rs
cmdline/src/cmd_utils/: cmd_rewrite.rs
cmdline/src/colors/: mod.rs  non_colored.rs
cmdline/src/hashes/: cn_nthash.rs  cn_seqhash.rs  fw_nthash.rs  fw_rkhash.rs
cmdline/src/io/: mod.rs  reads_writer.rs  varint.rs
cmdline/src/pipeline_common/: mod.rs
cmdline/src/query_pipeline/: colored_query_output.rs  colormap_reading.rs  counters_sorting.rs  mod.rs  parallel_kmers_query.rs  querier_minimizer_bucketing.rs
cmdline/src/rolling/: mod.rs  quality_check.rs
cmdline/src/utils/: async_slice_queue.rs  compressed_read.rs  debug_functions.rs  mod.rs  resource_counter.rs
conda/: LICENSE  (+2 more)
crates/api/: Cargo.toml
crates/api/cinclude/: ggcat-api.h
crates/api/example/: Cargo.toml  Makefile  example.cpp
crates/api/src/: lib.rs  utils.rs
crates/assembler/: Cargo.toml
crates/assembler/src/: lib.rs  pipeline.rs
crates/assembler_kmers_merge/: Cargo.toml
crates/assembler_kmers_merge/src/: final_executor.rs  lib.rs  map_processor.rs  preprocessor.rs  sorting.rs  structs.rs  unitigs_extender.rs
crates/assembler_minimizer_bucketing/: Cargo.toml
crates/assembler_minimizer_bucketing/src/: lib.rs  rewrite_bucket.rs
crates/assembler_pipeline/: Cargo.toml
crates/assembler_pipeline/src/: build_unitigs.rs  compute_matchtigs.rs  eulertigs.rs  extend_unitigs.rs  hashes_sorting.rs  lib.rs  links_compaction.rs  maximal_unitig_links.rs  reorganize_reads.rs
crates/cmdline/: Cargo.toml
crates/cmdline/src/: benchmarks.rs  main.rs  utils.rs
crates/colors/: Cargo.toml
crates/colors/src/: async_slice_queue.rs  colors_manager.rs  colors_memmap_writer.rs  lib.rs  non_colored.rs  parsers.rs  storage.rs
crates/dumper/: Cargo.toml
crates/dumper/src/: lib.rs  pipeline.rs
crates/hashes/: Cargo.toml
crates/hashes/benches/: hashes-bench.rs
crates/hashes/src/: cn_nthash.rs  cn_rkhash.rs  cn_seqhash.rs  extremal.rs  fw_nthash.rs  fw_seqhash.rs  lib.rs  nthash_base.rs  rolling.rs
crates/io/: Cargo.toml
crates/io/src/: compressed_read.rs  concurrent.rs  concurrent_filewriter.rs  ident_writer.rs  lib.rs  lines_reader.rs  memstorage.rs  partial_unitigs_extra_data.rs  sequences_reader.rs  sequences_stream.rs  structs.rs  varint.rs
crates/kmers_transform/: Cargo.toml
crates/kmers_transform/src/: debug_bucket_stats.rs  indirect_reads_extractor.rs  lib.rs  processor.rs  reader.rs  reads_buffer.rs  resplitter.rs  writer.rs
crates/minimizer_bucketing/: Cargo.toml
crates/minimizer_bucketing/src/: compactor.rs  counters_analyzer.rs  decode_helper.rs  lib.rs  queue_data.rs  reader.rs  resplit_bucket.rs  sequences_splitter.rs  split_buckets.rs
crates/querier/: Cargo.toml
crates/querier/src/: lib.rs  structs.rs
crates/sequence_output/: Cargo.toml
crates/sequence_output/src/: indirect_reads_extractor.rs  lib.rs  sequences_joiner.rs  structured_sequences.rs
crates/structs/: Cargo.toml
crates/structs/src/: lib.rs  map_entry.rs  partial_unitigs_extra_data.rs  unitigs_counters.rs
libs/instrumenter-rs/: Cargo.toml
libs/instrumenter-rs/instrumenter-derive-rs/: Cargo.toml
libs/instrumenter-rs/src/: instr_span.rs  lib.rs  subscriber.rs  tracking_allocator.rs
libs/libdeflate-async-rs/: Cargo.toml
libs/libdeflate-async-rs/src/: decompress_deflate.rs  decompress_gzip.rs  decompress_utils.rs  lib.rs
libs/libdeflate-rs/: Cargo.toml
libs/libdeflate-rs/src/: decompress_deflate.rs  deflate_constants.rs  lib.rs
libs/parallel-processor-rs/: Cargo.toml
libs/parallel-processor-rs/src/: debug_allocator.rs  fast_smart_bucket_sort.rs  lib.rs  lock_free_binary_writer.rs  memory_data_size.rs  phase_times_monitor.rs
libs/static-dispatch/static-dispatch-proc-macro/: Cargo.toml
nthash/: .travis.yml  Cargo.toml  README.md
nthash/benches/: nthash.rs
nthash/src/: lib.rs  result.rs
nthash/tests/: nthash.rs
parallel-processor-rs/: Cargo.toml
parallel-processor-rs/libraries/simple-process-stats/: Cargo.toml  LICENSE
parallel-processor-rs/rust-measurements/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
parallel-processor-rs/rust-measurements/examples/: engine.rs  format_test.rs  frequency.rs
parallel-processor-rs/rust-measurements/src/: acceleration.rs  angle.rs  angular_velocity.rs  area.rs  current.rs  data.rs  density.rs  energy.rs  force.rs  frequency.rs  humidity.rs  length.rs  lib.rs  mass.rs  measurement.rs  power.rs  prelude.rs  pressure.rs  resistance.rs  speed.rs  temperature.rs  test_utils.rs  torque.rs  torque_energy.rs  voltage.rs  volume.rs
parallel-processor-rs/rust-measurements/tests/: frequency.rs  get_appropriate_units.rs  pressure.rs  torque_and_energy.rs
parallel-processor-rs/src/: binary_writer.rs  channel.rs  debug_allocator.rs  fast_smart_bucket_sort.rs  lib.rs  lock_free_binary_writer.rs  masked_smart_bucket_sort.rs  memory_data_size.rs  multi_thread_buckets.rs  phase_times_monitor.rs  semaphore.rs  smart_bucket_sort.rs  stats_logger.rs  threadpools_chain.rs  types.rs
parallel-processor-rs/src/buckets/: bucket_type.rs  bucket_writer.rs  concurrent.rs  mod.rs  single.rs
parallel-processor-rs/src/execution_manager/: executor.rs  executor_address.rs  executors_list.rs  manager.rs  memory_tracker.rs  mod.rs  objects_pool.rs  packet.rs  priority.rs  thread_pool.rs  units_io.rs  work_manager.rs  work_scheduler.rs
pipeline/assembler/: Cargo.toml
pipeline/querier/: Cargo.toml
(+537 files in other folders)
