
[patch.crates-io]
#ggat_cmdline = { path = "crates/cmdline" }
#ggat_api = { path = "crates/api" }
#ggat_config = { path = "crates/config" }
#ggat_utils = { path = "crates/utils" }
#ggat_hashes = { path = "crates/hashes" }
#ggat_io = { path = "crates/io" }
#ggat_minimizer_bucketing = { path = "crates/minimizer_bucketing" }
#ggat_kmers_transform = { path = "crates/kmers_transform" }
#ggat_colors = { path = "crates/colors" }
#ggat_structs = { path = "crates/structs" }
#ggat_assembler_minimizer_bucketing = { path = "crates/assembler_minimizer_bucketing" }
#ggat_assembler_kmers_merge = { path = "crates/assembler_kmers_merge" }
#ggat_assembler = { path = "crates/assembler" }
#ggat_querier = { path = "crates/querier" }

[workspace]

members = [
    # Main crate for the command line tools
    "crates/cmdline",

    # Main library for api usage
    "crates/api",

    # Main c/c++ library for api usage
#    "crates/capi",

    # Global config constants
    "crates/config",

    # Global utilities
    "crates/utils",

    # Common pipeline crates
    "crates/hashes",
    "crates/io",
    "crates/minimizer_bucketing",
    "crates/kmers_transform",
    "crates/colors",
    "crates/structs",

    # Assembler pipeline
    "crates/assembler_minimizer_bucketing",
    "crates/assembler_kmers_merge",
    "crates/assembler",

    # Querier pipeline
    "crates/querier",

    # Dumper pipeline
    "crates/dumper",
]

default-members = ["crates/cmdline", "crates/api"]


[profile.release]
debug = true
lto = "thin"
#rustflags = ["-C", "link-arg=-fuse-ld=mold"]
