# [patch.crates-io]
# dynamic-dispatch-proc-macro = { path = "libs-crates/dynamic-dispatch-rs/dynamic-dispatch-proc-macro" }
# dynamic-dispatch = { path = "libs-crates/dynamic-dispatch-rs" }
# mt-debug-counters = { path = "libs-crates/mt-debug-counters-rs" }
# streaming-libdeflate-rs = { path = "libs-crates/streaming-libdeflate-rs" }
# papi-bindings = { path = "libs-crates/papi-bindings-rs" }
# nightly-quirks = { path = "libs-crates/nightly-quirks-rs" }
# instrumenter-proc-macro = { path = "libs-crates/instrumenter-rs/instrumenter-proc-macro-rs" }
# instrumenter = { path = "libs-crates/instrumenter-rs" }
# parallel-processor = { path = "libs-crates/parallel-processor-rs" }

[workspace]

resolver = "2"

members = [
    # Library crates added as submodules
    # "libs-crates/dynamic-dispatch-rs/dynamic-dispatch-proc-macro",
    # "libs-crates/dynamic-dispatch-rs",
    # "libs-crates/mt-debug-counters-rs",
    # "libs-crates/streaming-libdeflate-rs",
    # "libs-crates/papi-bindings-rs",
    # "libs-crates/nightly-quirks-rs",
    # "libs-crates/instrumenter-rs/instrumenter-proc-macro-rs",
    # "libs-crates/instrumenter-rs",
    # "libs-crates/parallel-processor-rs",

    # Main crate for the command line tools
    "crates/cmdline",

    # Main library for api usage
    "crates/api",

    # Main c/c++ library for api usage
    "crates/capi",

    # Global config constants
    "crates/config",

    # Global utilities
    "crates/utils",

    # Common pipeline crates
    "crates/logging",
    "crates/hashes",
    "crates/io",
    "crates/minimizer_bucketing",
    "crates/kmers_transform",
    "crates/colors",
    "crates/structs",

    # Assembler pipeline
    "crates/assembler_minimizer_bucketing",
    "crates/assembler_kmers_merge",
    "crates/assembler",

    # Querier pipeline
    "crates/querier",

    # Dumper pipeline
    "crates/dumper",


    # Examples
    "crates/api/example",
]

default-members = ["crates/cmdline", "crates/api"]

[profile.dev]
debug = true
opt-level = 2
lto = "off"

[profile.release]
debug = false
strip = true
lto = "thin"


[profile.with_debug]
inherits = "release"
debug = true
strip = false
lto = "thin"

# split-debuginfo = "packed"
