[package]
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
name = "ggcat"
version = "0.1.0"

[dependencies]
bincode = "1.3.3"
bstr = "1.0.1"
byteorder = "1.4.3"
ctrlc = "3.2.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
lz4 = "1.24.0"
nix = "0.25.0"
postcard = "1.0.2"
rayon = "1.5.3"
serde = "1.0.145"
stopwatch = "0.0.7"
structopt = "0.3.26"
hashbrown = "0.12.3"
rand = "0.8.5"
libc = "0.2.134"
filebuffer = "0.4.0"
crossbeam = "0.8.2"
fdlimit = "0.2.1"
parking_lot = "0.12.1"
pcg_rand = "0.13.0"
dashmap = "5.4.0"
serde_json = "1.0.85"
ahash = "0.8.0"
siphasher = "0.3.10"
desse = "0.2.1"
replace_with = "0.1.7"
roaring = "0.10.1"
backtrace = "0.3.66"
csv = "1.1.6"
flate2 = { default-features = false, features = ["cloudflare_zlib"], version = "1.0.24" }
typenum = "1.15.0"
fs_extra = "1.2.0"
atoi = "1.0.0"

# Config
config = { path = "../config" }
utils = { path = "../utils" }

# Static dispatch
static-dispatch = { path = "../libs/static-dispatch" }


# Common libraries
parallel-processor = { path = "../libs/parallel-processor-rs" }
#libdeflate-rs = { path = "../libs/libdeflate-rs" }
#nightly-quirks = { path = "../libs/nightly-quirks" }

# TODO
hashes = { path = "../pipeline/common/hashes" }
io = { path = "../pipeline/common/io" }
colors = { path = "../pipeline/common/colors" }
#minimizer_bucketing = { path = "../pipeline/common/minimizer_bucketing" }
#kmers_transform = { path = "../pipeline/common/kmers_transform" }
#structs = { path = "../pipeline/common/structs" }

assembler = { path = "../pipeline/assembler" }
instrumenter = { version = "0.1.0", path = "../libs/instrumenter-rs" }
querier = { path = "../pipeline/querier" }


[features]
mem-analysis = ["parallel-processor/track-usage"]
no-stats = ["parallel-processor/no-stats"]
process-stats = ["parallel-processor/process-stats"]
tracing = ["instrumenter/enabled"]
devel-build = ["assembler/devel-build", "querier/devel-build"]

[build-dependencies]
make-cmd = "0.1.0"

