[package]
name = "nthash"
version = "0.4.3"
authors = ["Luiz Irber <luiz.irber@gmail.com>"]
description = "ntHash is a rolling hash function for hashing all possible k-mers in a DNA sequence."
repository = "https://github.com/luizirber/nthash"
documentation = "https://docs.rs/nthash"
keywords = ["bioinformatics"]
categories = ["science", "algorithms"]
license = "MIT/Apache-2.0"
readme = 'README.md'
edition = "2018"

[dependencies]
error-chain = "^0.12.0"

[dev-dependencies]
criterion = "^0.2"
quickcheck = "^0.7.1"
rand = "^0.5"

[[bench]]
name = "nthash"
harness = false
