[package]
name = "parallel-processor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.0"
heapless = "0.7.1"
parking_lot = { version = "0.11.1", features = ["nightly"] }
rand = "0.8.3"
rayon = "1.5.0"
serde = "1.0.126"


[features]
no-stats = []
