[package]
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
name = "ggcat-api"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]

# Global config
config = { package = "ggcat_config", path = "../config" }

# GGCAT main modules
assembler = { package = "ggcat_assembler", path = "../assembler" }
querier = { package = "ggcat_querier", path = "../querier" }
dumper = { package = "ggcat_dumper", path = "../dumper" }

# GGCAT extra modules
io = { package = "ggcat_io", path = "../io" }
hashes = { package = "ggcat_hashes", path = "../hashes" }
colors = { package = "ggcat_colors", path = "../colors" }
utils = { package = "ggcat_utils", path = "../utils" }

fdlimit = "0.2.1"
parallel-processor = "0.1.5"
rayon = "1.6.1"
dynamic-dispatch = "0.4.1"
parking_lot = "0.12.1"
uuid = { version = "1.3.0", features = ["v4"] }

