[package]
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2024"
name = "ggcat-api"
version = "2.0.0"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]

# Global config
config = { package = "ggcat_config", path = "../config" }

# GGCAT main modules
assembler = { package = "ggcat_assembler", path = "../assembler" }
querier = { package = "ggcat_querier", path = "../querier" }
dumper = { package = "ggcat_dumper", path = "../dumper" }

# GGCAT extra modules
io = { package = "ggcat_io", path = "../io" }
hashes = { package = "ggcat_hashes", path = "../hashes" }
colors = { package = "ggcat_colors", path = "../colors" }
utils = { package = "ggcat_utils", path = "../utils" }

fdlimit = "0.3.0"
parallel-processor = "0.1.29"
rayon = "1.10.0"
dynamic-dispatch = "0.5.4"
parking_lot = "0.12.3"
uuid = { version = "1.9.1", features = ["v4"] }
ggcat-logging = { version = "2.0.0", path = "../logging" }
anyhow = "1.0.89"

[features]
detailed-stats = ["ggcat-logging/detailed-stats"]
