[package]
name = "ggcat_assembler"
version = "2.0.0"
edition = "2024"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Utils
utils = { package = "ggcat_utils", path = "../utils" }


# Static dispatch
dynamic-dispatch = "0.5.4"

# Common libraries
parallel-processor = "0.2.1"
streaming-libdeflate-rs = "0.2.2"
nightly-quirks = "0.1.4"

# Pipeline crates
assembler_minimizer_bucketing = { package = "ggcat_assembler_minibuck", path = "../assembler_minimizer_bucketing" }
assembler_kmers_merge = { package = "ggcat_assembler_kmerge", path = "../assembler_kmers_merge" }
assembler_pipeline = { package = "ggcat_assembler_pipeline", path = "../assembler_pipeline" }
kmers_transform = { package = "ggcat_kmers_transform", path = "../kmers_transform" }


# Common pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }
structs = { package = "ggcat_structs", path = "../structs" }


# Other libraries
parking_lot = "0.12.3"
fs_extra = "1.3.0"
rayon = "1.10.0"
hashbrown = "0.14.5"
itertools = "0.13.0"
byteorder = "1.5.0"
crossbeam = "0.8.4"
dashmap = "6.0.1"
ggcat-logging = { version = "2.0.0", path = "../logging" }
anyhow = "1.0.89"
bincode = "2.0.1"
typenum = "1.18.0"

[features]
support_kmer_counters = [
    "io/support_kmer_counters",
    "colors/support_kmer_counters",
    "structs/support_kmer_counters",
    "assembler_pipeline/support_kmer_counters",
    "assembler_kmers_merge/support_kmer_counters",
]

# Features used to filter ggcat capabilites
full = [
    "hash-16bit",
    "hash-32bit",
    "hash-64bit",
    "hash-128bit",
    "hash-rkarp",
    "hash-forward",
    "enable-colors",
    "enable-gfa",
]

hash-16bit = [     # Support 16bit hashing (optimization for k <= 8)
    "assembler_minimizer_bucketing/hash-16bit",
    "assembler_kmers_merge/hash-16bit",
    "assembler_pipeline/hash-16bit"
]
hash-32bit = [     # Support 32bit hashing (optimization for k <= 16)
    "assembler_minimizer_bucketing/hash-32bit",
    "assembler_kmers_merge/hash-32bit",
    "assembler_pipeline/hash-32bit"
]
hash-64bit = [     # Support 64bit hashing (optimization for k <= 32)
    "assembler_minimizer_bucketing/hash-64bit",
    "assembler_kmers_merge/hash-64bit",
    "assembler_pipeline/hash-64bit"
]
hash-128bit = [    # Support 128bit hashing (k <= 64)
    "assembler_minimizer_bucketing/hash-128bit",
    "assembler_kmers_merge/hash-128bit",
    "assembler_pipeline/hash-128bit"
]
hash-rkarp = [     # Support 128bit rabin-karp hashing (k > 64)
    "assembler_minimizer_bucketing/hash-rkarp",
    "assembler_kmers_merge/hash-rkarp",
    "assembler_pipeline/hash-rkarp"
]
hash-forward = [   # Support non-canonical hashing
    "assembler_minimizer_bucketing/hash-forward",
    "assembler_kmers_merge/hash-forward",
    "assembler_pipeline/hash-forward"
]
enable-colors = [  # Support colors
    "assembler_minimizer_bucketing/enable-colors",
    "assembler_kmers_merge/enable-colors",
    "assembler_pipeline/enable-colors"
]
enable-gfa = [     # Support gfa output
    "assembler_minimizer_bucketing/enable-gfa",
    "assembler_kmers_merge/enable-gfa",
    "assembler_pipeline/enable-gfa"
]