[package]
name = "ggcat_assembler_minibuck"
version = "2.0.0"
edition = "2024"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Common libraries
parallel-processor = "0.1.29"
streaming-libdeflate-rs = "0.1.5"

# Static dispatch
dynamic-dispatch = "0.5.4"

# Common pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }
structs = { package = "ggcat_structs", path = "../structs" }
minimizer_bucketing = { package = "ggcat_minimizer_bucketing", path = "../minimizer_bucketing" }
typenum = "1.18.0"

# Other libraries

[features]
devel-build = []
