[package]
name = "ggcat_assembler_minibuck"
version = "2.0.0"
edition = "2024"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Common libraries
parallel-processor = "0.2.0"
streaming-libdeflate-rs = "0.1.5"

# Static dispatch
dynamic-dispatch = "0.5.4"

# Common pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }
structs = { package = "ggcat_structs", path = "../structs" }
minimizer_bucketing = { package = "ggcat_minimizer_bucketing", path = "../minimizer_bucketing" }
typenum = "1.18.0"

# Other libraries

[features]
# Features used to filter ggcat capabilites
full = [
    "hash-16bit",
    "hash-32bit",
    "hash-64bit",
    "hash-128bit",
    "hash-rkarp",
    "hash-forward",
    "enable-colors",
    "enable-gfa",
]
hash-16bit = []    # Support 16bit hashing (optimization for k <= 8)
hash-32bit = []    # Support 32bit hashing (optimization for k <= 16)
hash-64bit = []    # Support 64bit hashing (optimization for k <= 32)
hash-128bit = []   # Support 128bit hashing (k <= 64)
hash-rkarp = []    # Support 128bit rabin-karp hashing (k > 64)
hash-forward = []  # Support non-canonical hashing
enable-colors = [] # Support colors
enable-gfa = []    # Support gfa output
