[package]
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2021"
name = "ggcat_cmdline"
version = "0.1.0"

[[bin]]
name = "ggcat"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
bstr = "1.4.0"
byteorder = "1.4.3"
itertools = "0.10.5"
lazy_static = "1.4.0"
lz4 = "1.24.0"
rayon = "1.7.0"
serde = "1.0.160"
structopt = "0.3.26"
hashbrown = "0.13.2"
rand = "0.8.5"
libc = "0.2.142"
filebuffer = "0.4.0"
crossbeam = "0.8.2"
fdlimit = "0.2.1"
parking_lot = "0.12.1"
dashmap = "5.4.0"
serde_json = "1.0.96"
ahash = "0.8.3"
siphasher = "0.3.10"
desse = "0.2.1"
replace_with = "0.1.7"
roaring = "0.10.1"
backtrace = "0.3.67"
csv = "1.2.1"
flate2 = { default-features = false, features = ["cloudflare_zlib"], version = "1.0.26" }
typenum = "1.16.0"
fs_extra = "1.3.0"
atoi = "2.0.0"

# Config
config = { package = "ggcat_config", path = "../config" }
utils = { package = "ggcat_utils", path = "../utils" }

# Static dispatch
dynamic-dispatch = "0.5.3"


# Common libraries
parallel-processor = "0.1.13"
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }

assembler = { package = "ggcat_assembler", path = "../assembler" }
instrumenter = "0.1.1"

querier = { package = "ggcat_querier", path = "../querier" }
ggcat-api = { version = "0.1.0", path = "../api" }


[features]
mem-analysis = ["parallel-processor/track-usage"]
no-stats = ["parallel-processor/no-stats"]
process-stats = ["parallel-processor/process-stats"]
tracing = ["instrumenter/enabled"]
devel-build = ["assembler/devel-build", "querier/devel-build"]
kmer-counters = ["assembler/support_kmer_counters"]

[build-dependencies]
make-cmd = "0.1.0"

[dev-dependencies]
hashes = { package = "ggcat_hashes", path = "../hashes" }
