[package]
authors = ["Andrea Cracco <guilucand@gmail.com>"]
edition = "2024"
name = "ggcat_cmdline"
version = "2.0.0"

[[bin]]
name = "ggcat"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
bstr = "1.9.1"
byteorder = "1.5.0"
itertools = "0.13.0"
lazy_static = "1.5.0"
lz4 = "1.25.0"
rayon = "1.10.0"
serde = "1.0.203"
structopt = "0.3.26"
hashbrown = "0.14.5"
rand = "0.8.5"
libc = "0.2.155"
filebuffer = "1.0.0"
crossbeam = "0.8.4"
fdlimit = "0.3.0"
parking_lot = "0.12.3"
dashmap = "6.0.1"
serde_json = "1.0.118"
ahash = "0.8.11"
siphasher = "1.0.1"
desse = "0.2.1"
replace_with = "0.1.7"
roaring = "0.10.5"
backtrace = "0.3.73"
csv = "1.3.0"
flate2 = { default-features = false, features = [
    "cloudflare_zlib",
], version = "1.0.30" }
fs_extra = "1.3.0"
atoi = "2.0.0"

# Config
config = { package = "ggcat_config", path = "../config" }
utils = { package = "ggcat_utils", path = "../utils" }

# Static dispatch
dynamic-dispatch = "0.5.4"


# Common libraries
parallel-processor = "0.2.0"
io = { package = "ggcat_io", path = "../io" }
colors = { package = "ggcat_colors", path = "../colors" }

assembler = { package = "ggcat_assembler", path = "../assembler" }
instrumenter = "0.1.3"

querier = { package = "ggcat_querier", path = "../querier" }
ggcat-api = { version = "2.0.0", path = "../api" }
ggcat-logging = { version = "2.0.0", path = "../logging" }


[features]
default = ["full"]
memory-guards = ["parallel-processor/memory-guards"]
mem-analysis = ["parallel-processor/track-usage"]
no-stats = ["parallel-processor/no-stats"]
detailed-stats = ["ggcat-api/detailed-stats"]
process-stats = ["parallel-processor/process-stats"]
tracing = ["instrumenter/enabled"]
kmer-counters = ["assembler/support_kmer_counters"]

# Features used to filter ggcat capabilites
full = [
    "hash-16bit",
    "hash-32bit",
    "hash-64bit",
    "hash-128bit",
    "hash-rkarp",
    "hash-forward",
    "enable-colors",
    "enable-gfa",
]

hash-16bit = ["assembler/hash-16bit", "querier/hash-16bit"]    # Support 16bit hashing (optimization for k <= 8)
hash-32bit = ["assembler/hash-32bit", "querier/hash-32bit"]    # Support 32bit hashing (optimization for k <= 16)
hash-64bit = ["assembler/hash-64bit", "querier/hash-64bit"]    # Support 64bit hashing (optimization for k <= 32)
hash-128bit = ["assembler/hash-128bit", "querier/hash-128bit"]   # Support 128bit hashing (k <= 64)
hash-rkarp = ["assembler/hash-rkarp", "querier/hash-rkarp"]    # Support 128bit rabin-karp hashing (k > 64)
hash-forward = ["assembler/hash-forward", "querier/hash-forward"]  # Support non-canonical hashing
enable-colors = ["assembler/enable-colors", "querier/enable-colors"] # Support colors
enable-gfa = ["assembler/enable-gfa", "querier/enable-gfa"]    # Support gfa output


[build-dependencies]
make-cmd = "0.1.0"

[dev-dependencies]
hashes = { package = "ggcat_hashes", path = "../hashes" }
