[package]
name = "ggcat_colors"
version = "2.0.0"
edition = "2024"
[dependencies]

# Config
config = { package = "ggcat_config", path = "../config" }

# Static dispatch
dynamic-dispatch = "0.5.4"

# Common libraries
parallel-processor = "0.2.3"
streaming-libdeflate-rs = "0.2.3"
nightly-quirks = "0.1.4"

# Common pipeline libraries
hashes = { package = "ggcat_hashes", path = "../hashes" }
io = { package = "ggcat_io", path = "../io" }
structs = { package = "ggcat_structs", path = "../structs" }
utils = { package = "ggcat_utils", path = "../utils" }

# Other libraries
hashbrown = "0.14.5"
dashmap = "6.0.1"
byteorder = "1.5.0"
siphasher = "1.0.1"
desse = "0.2.1"
replace_with = "0.1.7"
bstr = "1.9.1"
atoi = "2.0.0"
crossbeam = "0.8.4"
rayon = "1.10.0"
rand = "0.8.5"
roaring = "0.10.5"
parking_lot = "0.12.3"
serde = "1.0.203"
lz4 = "1.25.0"
bincode = "1.3.3"
itertools = "0.13.0"
ggcat-logging = { version = "2.0.0", path = "../logging" }
anyhow = "1.0.89"
rustc-hash = "2.1.0"
typenum = "1.18.0"

[features]
support_kmer_counters = []
